--- a/pages/prenderassassino/prender.css
+++ b/pages/prenderassassino/prender.css
@@ -7,7 +7,7 @@ body {
 
 h1 {
   text-align: center;
-  margin: 50px 0 0 60px;
+  margin: 40px ;
   color: rgb(218, 8, 8);
   font-size: 3rem;
 }
@@ -50,4 +50,17 @@ box-shadow: 1px 2px 15px 0px rgba(0,0,0,0.63);
 
 .cards .card:hover {
   transform: scale(1.1);
+}
+
+@media(max-width: 560px) {
+  
+  .card:nth-child(4), .card:nth-child(5), .card:nth-child(6), card:nth-child(7) {
+    height: 190px;  
+  }
+  /* .cards .card {
+    max-height: 300px;
+  }
+  .cards {
+    gap: 100px;
+  } */
 }
