alteração no caminho do background da página winner

--- a/pages/prenderassassino/assets/css/prender.css
+++ b/pages/prenderassassino/assets/css/prender.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(/pages/prenderassassino/assets/img/background.png);
+  background-image: url(../img/background.png);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
